--- a/Width.build_log.htm
+++ b/Width.build_log.htm
@@ -18,18 +18,18 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
-C:\Keil_v5\C51\Examples\8051_timer0_pulse\Width.uvproj
-Project File Date:  07/12/2020
+C:\Users\User\Desktop\cs431\CS431-Final-Project\CS431-Final-Project\Width.uvproj
+Project File Date:  08/23/2020
 
 <h2>Output:</h2>
 Build target 'Target 1'
 compiling Main.c...
-Main.c(64): warning C280: 'j': unreferenced local variable
+Main.c(72): warning C280: 'j': unreferenced local variable
 linking...
-Program Size: data=93.1 xdata=0 code=1491
+Program Size: data=103.1 xdata=0 code=1577
 creating hex file from "Width"...
 "Width" - 0 Error(s), 1 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
