--- a/Width.build_log.htm
+++ b/Width.build_log.htm
@@ -25,9 +25,17 @@ Project File Date:  08/23/2020
 Build target 'Target 1'
 compiling Main.c...
 linking...
-Program Size: data=89.1 xdata=0 code=1819
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_SENDSTRING?MAIN
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?FUNCTIONSET?MAIN
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?ENTRYMODESET?MAIN
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?DISPLAYONOFFCONTROL?MAIN
+Program Size: data=80.6 xdata=0 code=2124
 creating hex file from "Width"...
-"Width" - 0 Error(s), 0 Warning(s).
+"Width" - 0 Error(s), 4 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
